# Pizza1

./: CMakeLists.txt  Dockerfile  Doxyfile  pizza  pizza.cpp
.github/workflows/: docker.yml  doxy.yml
3 LABA/: Doxyfile  pizza.cpp
3 LABA/.github/workflows/: docs.yml
3 LABA/docs/html/: doxygen_crawl.html  files.html  files_dup.js  graph_legend.html  index.html  navtreedata.js  navtreeindex0.js  pizza_8cpp.html
3 LABA/docs/html/search/: all_0.js
3 LABA/docs/latex/: files.tex  pizza_8cpp.tex  refman.tex
